# dmtemplatetest

./: .travis.yml  CMakeLists.txt  README.md  build.bat  build.sh
cmake/: ModuleImport.cmake
include/: dmtemplate.h
src/: dmtemplate_module.cpp  dmtemplate_module.h
test/: dmtemplatetest.cpp
